Fix footer position to bottom

--- a/styles.css
+++ b/styles.css
@@ -8,3 +8,11 @@ body {
     color: rebeccapurple;
     font-size: 16px;
 }
+
+.bottom-nav {
+    position: fixed;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: lightskyblue;
+}
