--- a/styles.css
+++ b/styles.css
@@ -1,18 +1,22 @@
-*, *::after, *::before {
-    box-sizing: border-box;
+*,
+*::after,
+*::before {
+  box-sizing: border-box;
 }
 
 body {
-    margin: 0;
-    background-color: floralwhite;
-    color: rebeccapurple;
-    font-size: 16px;
+  margin: 0;
+  background-color: floralwhite;
+  color: rebeccapurple;
+  font-size: 16px;
 }
 
 .bottom-nav {
-    position: fixed;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    background-color: lightskyblue;
+  display: flex;
+  justify-content: center;
+  position: fixed;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: lightskyblue;
 }
