--- a/src/styles.scss
+++ b/src/styles.scss
@@ -4,10 +4,17 @@
   box-sizing: border-box;
 }
 
+$bg-light: floralwhite;
+$bg-dark: #333;
+$text-color: rebeccapurple;
+$btn-primary: #333;
+$btn-secondary: #666;
+$btn-active: #888;
+
 .body {
   margin: 0;
-  background-color: floralwhite;
-  color: rebeccapurple;
+  background-color: $bg-light;
+  color: $text-color;
   font-size: 16px;
 }
 
@@ -18,12 +25,12 @@
   left: 0;
   right: 0;
   bottom: 0;
-  background-color: #333;
+  background-color: $bg-dark;
 }
 .bottom-nav__button {
   height: 50px;
   width: 90px;
-  background-color: #333;
+  background-color: $btn-primary;
   border: none;
   outline: none;
   font-size: 1.6rem;
@@ -31,15 +38,15 @@
 }
 .bottom-nav__button:hover {
   font-size: 2rem;
-  background-color: #666;
+  background-color: $btn-secondary;
   transition: 0.5s;
 }
 
 .bottom-nav__button:active {
-  background-color: #888;
+  background-color: $btn-active;
   transition: 0.1s;
 }
 
 .bottom-nav__button-active {
-  background-color: #666;
+  background-color: $btn-secondary;
 }
